--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pandas~=1.4.1
-flask~=2.3.2
 pymongo~=4.3.3
+pandas~=1.4.1
+redis~=4.5.5
+flask~=2.3.2
 numpy~=1.22.4
-requests~=2.27.1
-schedule~=1.2.0
